# Multiproc

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
benchmarks/: benchmark.py
docs/source/: conf.py
docs/source/_autosummary/: multiproc.multiproc_cpu.rst
docs/source/_templates/autosummary/: module.rst
src/mpviz/: __init__.py
src/multiproc/: __init__.py  hist_test.py  mp_test.py  multicolored.py  multiple_logging.py  multiproc_cpu.py  multiproc_cpu_test.py  multiproc_pbar_test.py  prefixes.py  progressbar.py  test.py
tests/: __init__.py  conftest.py  test_integration.py  test_multiproc_cpu.py
